--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@ body{
 }
 #content{
   display: grid;
-  /* grid-template-columns: 30% 20% 50%; */
-  /* grid-template-columns: 1fr 2fr 1fr; */
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, minmax(200px, auto));
+  /* column-gap: 10px;
+  row-gap: 10px; */
+  gap: 10px;
   max-width: 960px;
   margin: 0 auto;
 }
