--- a/style.css
+++ b/style.css
@@ -6,9 +6,12 @@ body{
 #content{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(150px, auto);
   gap: 10px;
   max-width: 960px;
   margin: 0 auto;
+  /* align-items: end;
+  justify-items: start; */
 }
 #content div{
   background: #3bbced;
@@ -17,14 +20,15 @@ body{
 #content div:nth-child(even){
   background: #222;
 }
-.nested{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  grid-column: span 3;
+.one{
+  justify-self: end;
+  align-self: end;
 }
-.nested p{
-  border: 1px solid #fff;
-  padding: 20px;
-  margin: 0;
+.two{
+  justify-self: center;
+  align-self: center;
+}
+.three{
+  justify-self: start;
+  align-self: start;
 }
