--- a/style.css
+++ b/style.css
@@ -1,34 +1,60 @@
 body{
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
   text-align: center;
 }
 #content{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(150px, auto);
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: minmax(100px, auto);
   gap: 10px;
   max-width: 960px;
   margin: 0 auto;
-  /* align-items: end;
-  justify-items: start; */
+  position: relative;
 }
-#content div{
+#content > *{
   background: #3bbced;
   padding: 30px;
 }
-#content div:nth-child(even){
-  background: #222;
+header{
+  grid-column: 1 / 13;
 }
-.one{
-  justify-self: end;
-  align-self: end;
+main{
+  grid-column: 4 / 13;
+  grid-row: 2 / 4;
 }
-.two{
-  justify-self: center;
-  align-self: center;
+aside{
+  grid-column: 1 / 4;
 }
-.three{
-  justify-self: start;
-  align-self: start;
+section{
+  grid-column: 1 / 13;
+  grid-row: 4 / 6;
+}
+nav{
+  grid-column: 1 / 4;
+}
+footer{
+  grid-column: 1 / 13;
+}
+#grid{
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: minmax(100%, auto);
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  padding: 0;
+  display: none;
+}
+#grid p{
+  border: 1px dashed;
+  background: green;
+  margin: 0;
+  opacity: 0.4;
+}
+input:checked + #content #grid{
+  display: grid;
 }
