--- a/style.css
+++ b/style.css
@@ -1,60 +1,40 @@
 body{
-  color: #fff;
+  color: lightgreen;
   font-family: Arial, sans-serif;
   text-align: center;
 }
 #content{
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: minmax(150px, auto);
   gap: 10px;
   max-width: 960px;
   margin: 0 auto;
-  position: relative;
 }
-#content > *{
-  background: #3bbced;
+#content div{
+  border: 4px solid lightgreen;
   padding: 30px;
 }
-header{
-  grid-column: 1 / 13;
+.one{
+  grid-column: 1 / 3;
+  grid-row: 1 / 5;
 }
-main{
-  grid-column: 4 / 13;
-  grid-row: 2 / 4;
+.two{
+  grid-column: 3 / 7;
+  grid-row: 1 / 3;
 }
-aside{
-  grid-column: 1 / 4;
+.three{
+  grid-column: 3 / 5;
+  grid-row: 3 / 5;
 }
-section{
-  grid-column: 1 / 13;
-  grid-row: 4 / 6;
+.four{
+  grid-column: 5 / 7;
+  grid-row: 3 / 7;
 }
-nav{
-  grid-column: 1 / 4;
+.five{
+  grid-column: 1 / 5;
+  grid-row: 5 / 7;
 }
-footer{
-  grid-column: 1 / 13;
-}
-#grid{
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(100%, auto);
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  padding: 0;
-  display: none;
-}
-#grid p{
-  border: 1px dashed;
-  background: green;
-  margin: 0;
-  opacity: 0.4;
-}
-input:checked + #content #grid{
-  display: grid;
-}
+/* #content{
+  transform: rotateZ(45deg) scale(0.6);
+} */
